--- a/org/resources/postamble.html
+++ b/org/resources/postamble.html
@@ -10,11 +10,13 @@
   <span class="license">
     Content is available under
     <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
-      CC-BY-SA 4.0</a> |
+      CC-BY-SA 4.0</a>
   </span>
+  <br>
   <span class="generated">
     Created with %c on <a href="https://www.gnu.org">GNU</a>/<a href="https://www.kernel.org/">Linux</a>
-    <br/></span>
+  </span>
+  <br>
   <span class="copyright">
     &copy; Ghislain Vieilledent 2022 | <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/ghislainv"><i class="fa-brands fa-github"></i></a> <a target="_blank" rel="noopener" class="nav-link" href="https://ecoevo.social/@ghislainv"><i class="fa-brands fa-mastodon"></i></a>
   </span>
