--- a/org/resources/preamble.html
+++ b/org/resources/preamble.html
@@ -1,6 +1,6 @@
 <link rel="shortcut icon" href="favicon.ico">
-<link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1/new.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/inter.css">
+<link rel="stylesheet" href="resources/style/new.min.css">
 <link rel="stylesheet" href="resources/style/mycss.css">
 <script src="https://kit.fontawesome.com/c7f88d2b28.js" crossorigin="anonymous"></script>
 <header>
