Updating css for navbar.

--- a/org/resources/preamble.html
+++ b/org/resources/preamble.html
@@ -5,12 +5,12 @@
 <script src="https://kit.fontawesome.com/c7f88d2b28.js" crossorigin="anonymous"></script>
 <header>
 <h1>ecology.ghislainv.fr</h1>
-<nav id="main">
-    <a href="index.html">About</a> /
-    <a href="research.html">Research</a> /
-    <a href="people.html">People</a> /
-    <a href="software.html">Software</a> /
-    <a href="publications.html">Publications</a> /
-    <a href="cv.html">CV</a>
+<nav id="navbar">
+    <span id="navpage"><a href="index.html">About</a></span>
+    <span id="navpage"><a href="research.html">Research</a></span>
+    <span id="navpage"><a href="people.html">People</a></span>
+    <span id="navpage"><a href="software.html">Software</a></span>
+    <span id="navpage"><a href="publications.html">Publications</a></span>
+    <span id="navpage"><a href="cv.html">CV</a></span>
 </nav>
 </header>
