--- a/org/resources/postamble.html
+++ b/org/resources/postamble.html
@@ -9,15 +9,13 @@
   <br>
   <span class="license">
     Content is available under
-    <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
-      CC-BY-SA 4.0</a>
+    <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">CC-BY-SA 4.0</a>
+  </span>
+  <span class="copyright">
+    &copy; Ghislain Vieilledent 2022 | <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/ghislainv"><i class="fa-brands fa-github"></i></a> <a target="_blank" rel="noopener" class="nav-link" href="https://ecoevo.social/@ghislainv"><i class="fa-brands fa-mastodon"></i></a>
   </span>
   <br>
   <span class="generated">
-    Created with %c on <a href="https://www.gnu.org">GNU</a>/<a href="https://www.kernel.org/">Linux</a>
-  </span>
-  <br>
-  <span class="copyright">
-    &copy; Ghislain Vieilledent 2022 | <a target="_blank" rel="noopener" class="nav-link" href="https://github.com/ghislainv"><i class="fa-brands fa-github"></i></a> <a target="_blank" rel="noopener" class="nav-link" href="https://ecoevo.social/@ghislainv"><i class="fa-brands fa-mastodon"></i></a>
+    Created with %c on <a href="https://www.gnu.org">GNU</a>/<a href="https://www.kernel.org/">Linux</a> (<a href="https://github.com/ghislainv/ghislainv.github.io">source code</a>)
   </span>
 </footer>
