--- a/org/resources/postamble.html
+++ b/org/resources/postamble.html
@@ -5,7 +5,8 @@
   <a href="people.html">People</a> /
   <a href="software.html">Software</a> /
   <a href="publications.html">Publications</a> /
-  <a href="cv.html">CV</a>
+  <a href="cv.html">CV</a> /
+  <a href="news.html">News</a> <a target="_blank" rel="noopener" class="nav-link" href="news.xml"><i class="fas fa-rss"></i></a>
   <br>
   <span class="license">
     Content is available under
