--- a/org/resources/preamble.html
+++ b/org/resources/preamble.html
@@ -1,7 +1,7 @@
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/inter.css">
-<link rel="stylesheet" href="resources/style/new.min.css">
-<link rel="stylesheet" href="resources/style/mycss.css">
+<link rel="stylesheet" href="https://ecology.ghislainv.fr/resources/style/new.min.css">
+<link rel="stylesheet" href="https://ecology.ghislainv.fr/resources/style/mycss.css">
 <script src="https://kit.fontawesome.com/c7f88d2b28.js" crossorigin="anonymous"></script>
 <header>
 <h1>ecology.ghislainv.fr</h1>
@@ -12,5 +12,6 @@
     <span id="navpage"><a href="software.html">Software</a></span>
     <span id="navpage"><a href="publications.html">Publications</a></span>
     <span id="navpage"><a href="cv.html">CV</a></span>
+    <span id="navpage"><a href="news.html">News</a></span>
 </nav>
 </header>
