--- a/org/resources/postamble.html
+++ b/org/resources/postamble.html
@@ -16,6 +16,10 @@
   </span>
   <br>
   <span class="generated">
-    Created with %c on <a href="https://www.gnu.org">GNU</a>/<a href="https://www.kernel.org/">Linux</a> (<a href="https://github.com/ghislainv/ghislainv.github.io">source code</a>)
+    Created with %c on <a href="https://www.gnu.org">GNU</a>/<a href="https://www.kernel.org/">Linux</a> (<a href="https://github.com/ghislainv/ghislainv.github.io">source code</a>).
+  </span>
+  <br>
+  <span class="update">
+    Updated on %T.
   </span>
 </footer>
