--- a/org/resources/preamble.html
+++ b/org/resources/preamble.html
@@ -1,16 +1,17 @@
 <link rel="shortcut icon" href="favicon.ico">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/inter.css">
 <link rel="stylesheet" href="https://ecology.ghislainv.fr/resources/style/new.min.css">
-<link rel="stylesheet" href="https://ecology.ghislainv.fr/resources/style/mycss.css">
+<link rel="stylesheet" href="resources/style/mycss.css">
 <script src="https://kit.fontawesome.com/c7f88d2b28.js" crossorigin="anonymous"></script>
 <header>
-<h1>ecology.ghislainv.fr</h1>
-<nav id="navbar">
-  <span id="navpage"><a href="index.html">About</a></span>
-  <span id="navpage"><a href="people.html">People</a></span>
-  <span id="navpage"><a href="research.html">Research</a></span>
-  <span id="navpage"><a href="software.html">Software</a></span>
-  <span id="navpage"><a href="publications.html">Publications</a></span>
-  <span id="navpage"><a href="news.html">News</a></span>
-</nav>
+  <h1>ecology.ghislainv.fr</h1>
+  <img id="stripes" src="images/logos/stripes.png" />
+  <nav id="navbar">
+    <span id="navpage"><a href="index.html">About</a></span>
+    <span id="navpage"><a href="people.html">People</a></span>
+    <span id="navpage"><a href="research.html">Research</a></span>
+    <span id="navpage"><a href="software.html">Software</a></span>
+    <span id="navpage"><a href="publications.html">Publications</a></span>
+    <span id="navpage"><a href="news.html">News</a></span>
+  </nav>
 </header>
