--- a/org/resources/preamble.html
+++ b/org/resources/preamble.html
@@ -5,7 +5,7 @@
 <script src="https://kit.fontawesome.com/c7f88d2b28.js" crossorigin="anonymous"></script>
 <header>
   <h1>ecology.ghislainv.fr</h1>
-  <img id="stripes" src="images/logos/stripes.png" />
+  <!-- <img id="stripes" src="images/logos/stripes.png" /> -->
   <nav id="navbar">
     <span id="navpage"><a href="index.html">About</a></span>
     <span id="navpage"><a href="people.html">People</a></span>
